# algebra-dag

./: algebra-dag.cabal
src/Database/Algebra/: Dag.hs
src/Database/Algebra/Dag/: Build.hs  Common.hs
src/Database/Algebra/Rewrite/: DagRewrite.hs  Match.hs  PatternConstruction.hs  PatternSyntax.hs  Properties.hs  Traversal.hs
